<!--Mathew Anderson, n01436706 -->
<resources>
    <string name="app_name">MathewLab7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="mathew_anderson">Mathew Anderson</string>
    <string name="red">red</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="purple">purple</string>
    <string name="first_name">Mathew</string>
    <string name="ok">OK</string>
    <string name="province">PROVINCE</string>
    <string name="index">INDEX</string>
    <string name="clock">Clock</string>
    <string-array name="provinces_and_territories">
        <item>Newfoundland and Labrador</item>
        <item>Prince Edward Island</item>
        <item>Nova Scotia</item>
        <item>New Brunswick</item>
        <item>Quebec</item>
        <item>Ontario</item>
        <item>Manitoba</item>
        <item>Saskatchewan</item>
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Yukon</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
    </string-array>
</resources>